# g9project

./: .gitmodules  README.md
board/: board.kicad_pro  board.kicad_sch  board.kicad_sym  fp-lib-table  sym-lib-table
code/: CMakeLists.txt
code/src/: main.cpp
